<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ManageUserActivity">

    <include
        layout="@layout/my_toolbar"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:gravity="center_horizontal"
       android:layout_marginLeft="30dp"
       android:layout_marginRight="30dp">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="20sp"
           android:text="@string/user_details"
           android:padding="10dp"
           android:textStyle="bold"
           android:textAlignment="center"/>

       <EditText
           android:id="@+id/nameInput"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:autofillHints="no"
           android:inputType="textPersonName"
           android:hint="@string/name" />

       <EditText
           android:id="@+id/emailInput"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:importantForAutofill="no"
           android:inputType="textEmailAddress"
           android:hint="@string/email" />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:text="@string/gender"/>

       <RadioGroup
           android:id="@+id/genderRadioGroup"
           android:orientation="horizontal"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <RadioButton
               android:id="@+id/radioMale"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/male" />

           <RadioButton
               android:id="@+id/radioFemale"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/female" />

           <RadioButton
               android:id="@+id/radioOther"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/other" />
       </RadioGroup>

       <EditText
           android:id="@+id/ageInput"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/age"
           android:importantForAutofill="no"
           android:inputType="number" />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:layout_marginBottom="10dp"
           android:text="@string/profile_image"/>

       <ImageView
           android:id="@+id/photoView"
           android:layout_width="match_parent"
           android:layout_height="200dp"
           android:contentDescription="@string/profilepic"
           android:scaleType="center"
           android:src="@android:drawable/ic_menu_gallery" />

       <Button
           android:id="@+id/saveButton"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="@color/white"
           android:text="@string/save" />
   </LinearLayout>

</LinearLayout>