<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        layout="@layout/my_toolbar"/>

    <TextView
        android:id="@+id/noUsersTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/no_users_available"
        android:visibility="gone"
        android:textSize="18sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/chart_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_graph"
            android:textColor="@color/white"
            app:iconTint="@color/white"
            android:layout_marginEnd="10dp"
            app:icon="@drawable/ic_chart"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/new_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/add_new"
            android:textColor="@color/white"
            app:iconTint="@color/white"
            app:icon="@android:drawable/ic_menu_add"/>
    </LinearLayout>


</LinearLayout>